--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,15 @@
 </head>
 <body>
 
+<% if user_signed_in? %>
+<%= link_to 'sign out', destroy_user_session_path, :method => "DELETE" %>
+<% else %>
+<%= link_to 'sign in', new_user_session_path %>
+<% end %>
+
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
+
 <%= yield %>
 
 </body>
