--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -18,6 +18,8 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
         <td><%= user.username %></td>
         <td><%= user.email %></td>
         <td><%= link_to 'Show', user_registration_path %></td>
