--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Username:</strong>
-  <%= @user.username %>
+  <%= current_user.username %>
 </p>
 
 <p>
   <strong>Email:</strong>
-  <%= @user.email %>
+  <%= current_user.email %>
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
