--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 
 <% if user_signed_in? %>
+  Signed in as: <%= current_user.username %>
   <%= link_to "Sign Out", destroy_user_session_path, method: :delete  %>
 <% else %>
   <%= link_to "Sign In", new_user_session_path  %>
