--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,4 +26,6 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<% unless user_signed_in? %>
+  <%= link_to 'New User', new_user_registration_path %>
+<% end %>
