--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,6 +19,14 @@
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+  <div class="field">
+    <%= f.label :first_name %><br>
+    <%= f.text_field :first_name %>
+  </div>
+  <div class="field">
+    <%= f.label :last_name %><br>
+    <%= f.text_field :last_name %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
