--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
 
    <p class="notice"><%= notice %></p>
    <p class="alert"><%= alert %></p>
+   <% flash.each do |type, msg| %>
+    <div class="<%=type%>"><%= msg %></div>
+    <% end %>
+
 
 <%= yield %>
 
