--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,5 +33,6 @@
 </table>
 
 <br>
-
-<%= link_to 'New User', new_user_registration_path %>
+<% unless user_signed_in? %>
+  <%= link_to 'New User', new_user_registration_path %>
+<% end %>
