--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
+    <h1>
+      <%= link_to('Assignment Devise', root_path) %>
+    </h1>
+    <%= render :partial => 'shared/flash' %>
+    <%= render :partial => 'shared/sign_in_out' %>
     <%= yield %>
   </body>
 </html>
