--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,29 +1,46 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Listing Users</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Username</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% unless current_user %>
+  <%= link_to 'Register New User', new_user_registration_path %>
+<% end %>
 
-  <tbody>
-    <% @users.each do |user| %>
+<% if @users.present? %>
+
+  <table>
+    <thead>
       <tr>
-        <td><%= user.username %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Last Name</th>
+        <th>First Name</th>
+        <th>Username</th>
+        <th>Email</th>
+        <th colspan="3"></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @users.each do |user| %>
+        <tr>
+          <td><%= user.last_name %></td>
+          <td><%= user.first_name %></td>
+          <td><%= user.username %></td>
+          <td><%= user.email %></td>
+          <td><%= link_to 'Show', user %></td>
+
+          <% if current_user %>
+            <td><%= link_to 'Edit', edit_user_registration_path(user) %></td>
+            <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
+
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+
+<% else %>
+
+  <p>No users</p>
+
+<% end %>
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
