--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+<% flash.each do |type, msg| %>
+  <div>
+    <%= "#{type} - #{msg}" %>
+  </div>
+<% end %>
+
+<%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+
 <%= yield %>
 
 </body>
