--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% flash.each do |type, message| %>
+  <%= content_tag :p, message, class: "#{type}" %>
+<% end %>
 
 <%= yield %>
 
