--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -25,5 +25,9 @@
 </table>
 
 <br>
-
+<% if current_user %>
+  <%= link_to 'Logout', destroy_user_session_path, method: :delete %>
+<%else%>
+  <%= link_to 'Login', new_user_session_path %>
+<%end%>
 <%= link_to 'New User', new_user_path %>
