finish basic devise assignment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,11 @@
   </div>
 <% end %>
 
-<%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+<% if user_signed_in? %>
+  <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+<% else %>
+  <%= link_to "Sign In", new_user_session_path %>
+<% end %>
 
 <%= yield %>
 
