small button fix

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -30,4 +30,4 @@
 <%else%>
   <%= link_to 'Login', new_user_session_path %>
 <%end%>
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_registration_path %>
