--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if user_signed_in? %>
+    <%= link_to "Logout", destroy_user_session_path, method: :delete, data: {confirm: "WANNA LOG OUT???"} %>
+    <%= "Logged in as #{current_user.username}" %>
+  <% else %>
+    <%= link_to "Login", new_user_session_path %>
+  <% end %>
 <% flash.each do |type, message| %>
   <%= content_tag :p, message, class: "#{type}" %>
 <% end %>
