--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,9 +16,11 @@
       <tr>
         <td><%= user.username %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_registration_path(user) %></td>
-        <td><%= link_to 'Destroy', registration_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user_path(user) %></td>
+        <% if current_user && current_user.id == user.id %>
+          <td><%= link_to 'Edit', edit_user_registration_path(user) %></td>
+          <td><%= link_to 'Destroy', registration_path(user), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
