--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,5 +10,8 @@
   <%= @user.email %>
 </p>
 
-<%= link_to 'Edit', edit_user_registration_path(@user) %> |
+<% if current_user && current_user.id == @user.id %>
+  <%= link_to 'Edit', edit_user_registration_path(@user) %>
+<% end %>
+  |
 <%= link_to 'Back', users_path %>
