Added names to user

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,16 @@
   <%= @user.email %>
 </p>
 
+<p>
+  <strong>First Name:</strong>
+  <%= @user.first_name %>
+</p>
+
+<p>
+  <strong>Last Name:</strong>
+  <%= @user.last_name %>
+</p>
+
 <% if current_user && current_user.id == @user.id %>
   <%= link_to 'Edit', edit_user_registration_path(@user) %>
 <% end %>
