--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<% if user_signed_in? %>
+   <%= link_to "Logout", logout_path, method: :delete %>
+<% else %>
+    <%= link_to "Login", login_path %>
+<% end %>
+
 <%= yield %>
 
 </body>
