--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,17 @@
 </head>
 <body>
 
-<%= yield %>
+	<div>
+		<% if user_signed_in? %>
+			<p><%= "Welcome #{current_user.username} !" %></p>
+			<%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+		<% else %>
+			<p><%= link_to "Sign Up", new_user_registration_path %> or <%= link_to "Sign in", new_user_session_path %></p>
+		<% end %>
+	</div>
+
+
+	<%= yield %>
 
 </body>
 </html>
