Added devise gem

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_field :email %>
   </div>
 
+  <div class="field">
+    <%= f.label :encrypted_password %>
+    <%= f.password_field :encrypted_password %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
