--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <% if user_signed_in? %>
+      <%= current_user.username %> | <%= link_to "Log out", destroy_user_session_path, method: :delete %>
+    <% else %>
+      Welcome! Please <%= link_to "sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %>!
+    <% end %>
     <%= yield %>
   </body>
 </html>
