--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= link_to "Logout", destroy_user_session_path, :method => "delete" %>
+    <%= link_to "Login", new_user_session_path %>
     <%= yield %>
   </body>
 </html>
