a few simple changes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <p class="error"><%= flash[:error] if flash[:error] %></p>
+    <p class="success"><%= flash[:success] if flash[:success] %></p>
     <%= yield %>
   </body>
 </html>
