--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,10 @@
 
 <h1>Users</h1>
 
+<p>Signed In? <%= user_signed_in? %></p>
+<%= link_to "Sign out", destroy_user_session_path, method: :delete if user_signed_in? %>
+<%= link_to "Sign in", user_session_path unless user_signed_in? %>
+
 <table>
   <thead>
     <tr>
@@ -26,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_registration_path %>
