--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
   </head>
 
   <body>
+    <p><%= flash[:error] %></p>
+    <p><%= flash[:alert] %></p>
     <% if user_signed_in? %>
       <%= current_user.username %> | <%= link_to "Log out", destroy_user_session_path, method: :delete %>
     <% else %>
