--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <body>
     <div class="container">
       <%= render 'shared/navbar' %>
+      <%= render 'shared/flash' %>
       <p class="alert"><%= alert %></p>
       <%= yield %>
     </div>
