Completed validations on sign up form

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,14 @@
   </div>
 
   <div class="field">
+    <%= f.input :first_name %>
+  </div>
+
+  <div class="field">
+    <%= f.input :last_name %>
+  </div>
+
+  <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email %>
   </div>
