--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -18,6 +18,16 @@
     <%= f.text_field :email %>
   </div>
 
+  <div class="field">
+    <%= f.label :first_name %>
+    <%= f.text_field :first_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :last_name %>
+    <%= f.text_field :last_name %>
+  </div> 
+
   <div class="actions">
     <%= f.submit %>
   </div>
