--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,6 @@
 <p id="notice"><%= notice %></p>
 <%= @user.email %><br>
+<%= @user.first_name %><br>
+<%= @user.last_name %><br>
 <%= link_to 'Edit', edit_user_path(@user) %> |
 <%= link_to 'Back', users_path %>
