--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
     <p id="notice"><%= notice %></p>
     <p id="alert"><%= alert %></p>
 
+    <% if user_signed_in? %>
+      <p>You are signed in as <%= "#{current_user.username} (#{current_user.email}). Not you?" %> <%= link_to "Sign out", destroy_user_session_path, method: :delete %>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
