--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,4 +26,6 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<p><%= link_to 'Sign Up', new_user_registration_path %></p>
+
+<p><%= link_to 'Sign In', new_user_session_path %></p>
