--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,6 +6,8 @@
   <thead>
     <tr>
       <th>Username</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
       <th colspan="3"></th>
     </tr>
@@ -15,6 +17,8 @@
     <% @users.each do |user| %>
       <tr>
         <td><%= user.username %></td>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
         <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
         <td><%= link_to 'Edit', edit_user_path(user) %></td>
