--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,16 @@
-<!-- <p id="notice"><%= notice %></p> -->
-
 <p>
   <strong>Username:</strong>
   <%= @user.username %>
+</p>
+
+<p>
+  <strong>First Name:</strong>
+  <%= @user.first_name %>
+</p>
+
+<p>
+  <strong>Last Name:</strong>
+  <%= @user.last_name %>
 </p>
 
 <p>
