--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,11 +14,10 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
-        <td><%= user.username %></td>
         <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', edit_user_registration_path(user) %></td>
+        <td><%= link_to 'Edit', edit_user_registration_path %></td>
+        <td><%= link_to 'Destroy', destroy_user_session_path , method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +25,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_registration_path %>
