--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,12 @@
   </head>
 
   <body>
+
+  	<div class="container">
+  		<% if notice %><div class="alert alert-info"><%= notice%></div><%end%>
+  		
+  		<% if alert %><div class="alert alert-warning"><%=alert%></div><%end%>
+  	</div>
     <%= yield %>
   </body>
 </html>
