--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,13 @@
 
 <h1>Users</h1>
 
+<%if !user_signed_in? %>
+  <%=link_to "sign up", new_user_registration_path %>
+  <%=link_to "login", new_user_session_path %>
+<%else%>
+  <%= "welcome #{current_user.email}"%><br>
+  <%= link_to "logout", destroy_user_session_path, method: :delete %> 
+ <%end %>
 <table>
   <thead>
     <tr>
