--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -5,7 +5,8 @@
 <table>
   <thead>
     <tr>
-      <th>Username</th>
+      <th>First Name</th>
+      <th>Last Name</th>
       <th>Email</th>
       <th colspan="3"></th>
     </tr>
@@ -14,6 +15,8 @@
   <tbody>
     <% @users.each do |user| %>
       <tr>
+        <td><%= user.first_name %></td>
+        <td><%= user.last_name %></td>
         <td><%= user.email %></td>
         <td><%= link_to 'Show', edit_user_registration_path(user) %></td>
         <td><%= link_to 'Edit', edit_user_registration_path %></td>
