--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,3 +1,7 @@
-// Place all the styles related to the Users controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.auth-rules {
+  background-color: #E5E5E5;
+  color: gray;
+  padding: 10px;
+  margin-bottom: 20px;
+  p {weight: heavy;}
+} /* .auth-rules */
