--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -4,6 +4,7 @@
   <%= f.input :username %>
   <%= f.input :email %>
   <%= f.input :password %>
+  <%= f.input :password_confirmation %>
   <%= f.button :submit %>
 <% end %>
 
