--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,4 +14,5 @@
 </p>
 
 <%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+<%= link_to 'Delete', user_path(@user), method: :delete, data: {confirm: 'Are you sure?'} %> |
+<%= link_to 'User Index', users_path %>
